--- a/examples/chatgpt-customer-service-bot/chatgpt_customer_service_agent.ipynb
+++ b/examples/chatgpt-customer-service-bot/chatgpt_customer_service_agent.ipynb
@@ -376,15 +376,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'type': 'function', 'function': {'name': 'is_shipping_available', 'description': 'Whether items can be shipped to city `city_name` in state `state_code`. Returns \"True\" or \"False\"', 'parameters': {'type': 'object', 'properties': {'city_name': {'type': 'string', 'description': 'The city, e.g. San Francisco'}, 'state_code': {'type': 'string', 'description': 'The two-character state code, e.g. CA'}}, 'required': ['city_name', 'state_code']}}}, {'type': 'function', 'function': {'name': 'get_order_status', 'description': 'Get status of the order with the given `order_id`. Returns the status as a string.', 'parameters': {'type': 'object', 'properties': {'order_id': {'type': 'string', 'description': 'Order ID of the order. E.g. 100433'}}, 'required': ['order_id']}}}, {'type': 'function', 'function': {'name': 'check_refund_available', 'description': 'Check if the order with the given `order_id` is eligible for a refund. Returns \"True\" or \"False\"', 'parameters': {'type': 'object', 'properties': {'order_id': {'type': 'string', 'description': 'Order ID of the order. E.g. 100433'}}, 'required': ['order_id']}}}, {'type': 'function', 'function': {'name': 'get_product_details', 'description': 'Get details of the product with the given `product_id` in a JSON formatted string', 'parameters': {'type': 'object', 'properties': {'product_id': {'type': 'string', 'description': 'Product ID of the product. E.g. 503423'}}, 'required': ['product_id']}}}, {'type': 'function', 'function': {'name': 'get_product_suggestions', 'description': 'Get suggestions for products for the given `category`. Returns a string containing a comma-separated list of product ids.', 'parameters': {'type': 'object', 'properties': {'cateogory': {'type': 'string', 'description': 'Category of products, e.g. Toy. Category of a product can be retrieved using the `get_product_details` function.'}}, 'required': ['category']}}}, {'type': 'function', 'function': {'name': 'sys_request', 'description': 'Make a query in natural language to a human operator, for information that is not available by other functions', 'parameters': {'type': 'object', 'properties': {'query': {'type': 'string', 'description': 'Query in natural language for a human operator.'}}, 'required': ['query']}}}, {'type': 'function', 'function': {'name': 'request_transfer_to_human', 'description': 'End the current chat and transfer to human support expert', 'parameters': {'type': 'object', 'properties': {}}}}, {'type': 'function', 'function': {'name': 'chat_complete', 'description': 'Call this function with the analysis of the chat when the chat with the customer is over.', 'parameters': {'type': 'object', 'properties': {'issue_resolved': {'type': 'string', 'description': 'Whether the customer issue was resolved. Must be \"True\" or \"False\"'}, 'customer_satisfaction_level': {'type': 'string', 'description': 'The satisfaction level of the customer with the chat support. Must be \"Positive\", \"Neutral\" or \"Negative\"'}}, 'required': ['issue_resolved', 'customer_satisfaction_level']}}}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "customer_agent = CustomerServiceBot(config, \n",
     "    functions = functions,\n",
@@ -429,22 +421,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant: Hi Sara B! My name is Darry and I am an AI customer support assistant. How can I assist you today?\n",
+      "Assistant: Hello Sara B! My name is Darry and I'm an AI customer support agent. How can I assist you today?\n",
       "\n",
       "\n",
-      "Assistant: I'm sorry to hear that you can't find your package, Sara. I'd be happy to help you track it. Could you please provide me with the order ID?\n",
+      "Assistant: I apologize for the inconvenience, Sara B. It seems that the status of your order with ID 10050 is \"Return Initiated\". This means that the order is in the process of being returned.\n",
+      "\n",
+      "To get more information about the status and location of your package, I suggest contacting our customer support team. They will be able to provide you with the most accurate and up-to-date information. Would you like me to transfer you to a human support expert who can assist you further?\n",
       "\n",
       "\n",
-      "Assistant: Thank you for providing the order ID, Sara. The current status of your order (order ID: 10050) is \"Return Initiated\". This means that the return process for your package has been initiated.\n",
+      "Assistant: Yes, Sara B, it appears that you are eligible for a refund for your order with ID 10050. I apologize for any inconvenience caused. To proceed with the refund, please contact our customer support team. They will assist you further and initiate the refund process.\n",
       "\n",
-      "If you have any further questions or concerns regarding your return, please let me know and I'll be glad to assist you.\n",
-      "\n",
-      "\n",
-      "Assistant: I apologize for any inconvenience this may have caused, Sara. To further assist you, I recommend reaching out to our customer support team. They will be able to provide you with detailed information about your return and guide you through the next steps.\n",
-      "\n",
-      "You can contact our customer support team by phone at [phone number] or by email at [email address]. They are available [working hours] to assist you.\n",
-      "\n",
-      "If there's anything else I can assist you with, please let me know.\n",
+      "If you need any assistance in contacting our customer support team or have any further questions, please let me know.\n",
       "\n",
       "Chat ended: The chat is being transferred to a human expert.\n"
      ]
